--- a/contact-us.html
+++ b/contact-us.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-btns col-md-8">
-                            <button type="submit" class="btn-subm">ارسال</button>
+                            <button name="submit" type="submit" class="btn-subm">ارسال</button>
                         </div>
                     </form>
                 </section>
