--- a/public/add-product.html
+++ b/public/add-product.html
@@ -20,37 +20,25 @@
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>عنوان محصول</h3>
-                                <input name="frm[title]" type="text">
+                                <input name="title" type="text">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>قیمت</h3>
-                                <input name="frm[price]" type="number">
+                                <input name="price" type="number">
                             </div>
                         </div>
-                        <div class="input-g-out col-md-8">
-                            <div class="input-g-in">
-                                <h3>وضعیت</h3>
-                                <input name="frm[status]" type="text">
-                            </div>
-                        </div>
-                        <div class="input-g-out col-md-8">
-                            <div class="input-g-in">
-                                <h3>دسته بندی</h3>
-                                <input name="frm[procat]" type="text">
-                            </div>
-                        </div>
+                        
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in igi-txt-area">
                                 <h3>توضیحات</h3>
-                                <textarea name="frm[text]" id="" cols="30" rows="10"></textarea>
+                                <textarea name="description" id="" cols="30" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>تصویر</h3>
-                                
                             </div>
                             <input type="file">
                         </div>
