--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -20,25 +20,25 @@
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>نام و نام خانوادگی</h3>
-                                <input name="frm[name]" type="text">
+                                <input name="name" type="text">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>تلفن همراه</h3>
-                                <input name="frm[phone]" type="tel">
+                                <input name="phone" type="tel">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>ایمیل</h3>
-                                <input name="frm[email]" type="email">
+                                <input name="email" type="email">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in igi-txt-area">
                                 <h3>متن پیام</h3>
-                                <textarea name="frm[text]" id="" cols="30" rows="10"></textarea>
+                                <textarea name="body" id="" cols="30" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-btns col-md-8">
