--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -20,25 +20,25 @@
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>نام کاربری</h3>
-                                <input name="frm[username]" type="text">
+                                <input name="username" type="text">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>رمز عبور</h3>
-                                <input name="frm[password]" type="password">
+                                <input name="password" type="password">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>تکرار رمز عبور</h3>
-                                <input name="frm[repassword]" type="password">
+                                <input type="password">
                             </div>
                         </div>
                         <div class="input-g-out col-md-8">
                             <div class="input-g-in">
                                 <h3>ایمیل</h3>
-                                <input name="frm[email]" type="email">
+                                <input name="email" type="email">
                             </div>
                         </div>
                         <div class="form-btns col-md-8">
